--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
-numpy
-pandas
-gunicorn
-django
-djangorestframework
-django-environ
-django-tailwind
-whitenoise
-psycopg2-binary
-django-cors-headers
-django-filter
-rq
+asgiref==3.8.0
+click==8.1.7
+colorama==0.4.6
+Django==5.0.3
+django-cors-headers==4.3.1
+django-environ==0.11.2
+django-filter==24.1
+django-tailwind==3.8.0
+djangorestframework==3.15.0
+gunicorn==21.2.0
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.1
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+redis==5.0.3
+rq==1.16.1
+six==1.16.0
+sqlparse==0.4.4
+tzdata==2024.1
+whitenoise==6.6.0
