--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -5,7 +5,7 @@ Django==5.0.3
 django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==24.1
-django-tailwind[reload]
+# django-tailwind[reload]
 djangorestframework==3.15.0
 gunicorn==21.2.0
 numpy==1.26.4
