--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -11,6 +11,7 @@ gunicorn==21.2.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
+Pillow
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
