--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ packaging==24.0
 pandas==2.2.1
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+Pillow
 python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.3
