--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-environ==0.11.2
 django-filter==24.1
 django-tailwind==3.8.0
 djangorestframework==3.15.0
+django-jquery
 gunicorn==21.2.0
 numpy==1.26.4
 packaging==24.0
