--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,17 +2,18 @@ asgiref==3.8.0
 click==8.1.7
 colorama==0.4.6
 Django==5.0.3
+django-browser-reload==1.12.1
 django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==24.1
-django-tailwind[reload]
+django-jquery==3.1.0
+django-tailwind==3.8.0
 djangorestframework==3.15.0
-django-jquery
 gunicorn==21.2.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
-Pillow
+pillow==10.2.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
