--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -6,6 +6,7 @@ django-browser-reload==1.12.1
 django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==24.1
+django-formtools==2.5.1
 django-jquery==3.1.0
 django-tailwind==3.8.0
 djangorestframework==3.15.0
