--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.0.3
 django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==24.1
+django-formtools==2.5.1
 django-tailwind==3.8.0
 djangorestframework==3.15.0
 django-jquery
